--- a/style.css
+++ b/style.css
@@ -14,7 +14,34 @@ body {
   overflow-y: auto;
   perspective: 10px;
 }
+header{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+ background-color: rgba(255, 228, 196, 0.37);
+  position: absolute;
+  top: 20px;
+  padding: 0 3%;
 
+}
+header h1{
+  font-size: 30px;
+  line-height: 1.4rem;
+}
+header nav{
+  /* border: solid; */
+  display: flex;
+  gap: 25px;
+ 
+}
+header nav a{
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+font-weight: 400;
+
+}
 .container {
   display: flex;
   justify-content: center;
